ステートマシンを実現するサンプルアプリケーションを追加
NAB-166

--- a/src/main/resources/db.config
+++ b/src/main/resources/db.config
@@ -1,4 +1,4 @@
-db.url=jdbc:h2:file:./h2/db/workflow_sample;AUTO_SERVER=true
+db.url=jdbc:h2:file:./h2/db/workflow_sample;AUTO_SERVER=TRUE
 db.user=workflow
 db.password=workflow
 nablarch.db.schema = PUBLIC
