--- a/pom.xml
+++ b/pom.xml
@@ -101,19 +101,19 @@
     <dependency>
       <groupId>com.nablarch.framework</groupId>
       <artifactId>nablarch-fw-messaging</artifactId>
-      <scope>testRuntime</scope>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>com.nablarch.framework</groupId>
       <artifactId>nablarch-fw-messaging-http</artifactId>
-      <scope>testRuntime</scope>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>com.nablarch.framework</groupId>
       <artifactId>nablarch-fw-web-extension</artifactId>
-      <scope>testRuntime</scope>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
