SQL Maven Pluginのconfigurationの誤りを修正
NAB-166 ステートマシンを実現できるようにする

--- a/pom.xml
+++ b/pom.xml
@@ -315,7 +315,9 @@
               <goal>execute</goal>
             </goals>
             <configuration>
-              <srcFiles>src/main/resources/ddl/sequence.sql</srcFiles>
+              <srcFiles>
+                <srcFile>src/main/resources/ddl/sequence.sql</srcFile>
+              </srcFiles>
             </configuration>
           </execution>
         </executions>
