--- a/pom.xml
+++ b/pom.xml
@@ -205,6 +205,28 @@
     </resources>
 
     <plugins>
+      
+      <plugin>
+        <groupId>com.nablarch.workflow</groupId>
+        <artifactId>nablarch-workflow-tool</artifactId>
+        <version>1.1.0</version>
+        
+        <executions>
+          <execution>
+            <id>generate-csv</id>
+            <phase>generate-resources</phase>
+            <goals>
+              <goal>generate-csv</goal>
+            </goals>
+            <configuration>
+              <outputPath>src/test/resources/data</outputPath>
+              <configurationFilePath>src/design/workflow-tool.xml</configurationFilePath>
+              <workflowBpmnDir>src/design/camunda/workflow</workflowBpmnDir>
+              <stateMachineBpmnDir>src/design/camunda/statemachine</stateMachineBpmnDir>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
       <plugin>
         <groupId>jp.co.tis.gsp</groupId>
         <artifactId>gsp-dba-maven-plugin</artifactId>
@@ -293,7 +315,9 @@
               <goal>execute</goal>
             </goals>
             <configuration>
-              <srcFiles>src/main/resources/ddl/sequence.sql</srcFiles>
+              <srcFiles>
+                <srcFile>src/main/resources/ddl/sequence.sql</srcFile>
+              </srcFiles>
             </configuration>
           </execution>
         </executions>
