--- a/pom.xml
+++ b/pom.xml
@@ -218,7 +218,7 @@
       <plugin>
         <groupId>jp.co.tis.gsp</groupId>
         <artifactId>gsp-dba-maven-plugin</artifactId>
-        <version>4.3.0-SNAPSHOT</version>
+        <version>4.3.0</version>
         <dependencies>
           <dependency>
             <groupId>com.h2database</groupId>
