--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,10 @@
 
     <!-- toolsディレクトリへのパス -->
     <nablarch.tools.dir>${project.basedir}/tools</nablarch.tools.dir>
-
+    <user>workflow</user>
+    <password>${user}</password>
+    <url>jdbc:h2:./h2/db/SAMPLE;AUTO_SERVER=TRUE</url>
+    <driver>org.h2.Driver</driver>
   </properties>
 
   <!--
@@ -88,7 +91,7 @@
       <dependency>
         <groupId>com.nablarch.profile</groupId>
         <artifactId>nablarch-bom</artifactId>
-        <version>5u10</version>
+        <version>5u11</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -131,13 +134,17 @@
     <dependency>
       <groupId>com.nablarch.integration</groupId>
       <artifactId>nablarch-jsr310-adaptor</artifactId>
-      <version>0.0.1</version>
     </dependency>
 
     <dependency>
       <groupId>com.nablarch.integration</groupId>
       <artifactId>nablarch-slf4j-adaptor</artifactId>
-      <version>1.0.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.2.3</version>
     </dependency>
 
     <dependency>
@@ -177,6 +184,22 @@
       <version>1.16.18</version>
       <scope>provided</scope>
     </dependency>
+
+
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>5.0.0</version>
+      <scope>test</scope>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-params</artifactId>
+      <version>5.0.0</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -228,12 +251,12 @@
           </dependency>
         </dependencies>
         <configuration>
-          <driver>org.h2.Driver</driver>
-          <url>jdbc:h2:./h2/db/SAMPLE;AUTO_SERVER=TRUE</url>
+          <driver>${driver}</driver>
+          <url>${url}</url>
           <adminUser>workflow</adminUser>
           <adminPassword>workflow</adminPassword>
-          <user>workflow</user>
-          <password>workflow</password>
+          <user>${user}</user>
+          <password>${password}</password>
           <erdFile>src/main/resources/entity/app.edm</erdFile>
           <schema>PUBLIC</schema>
           <useJSR310>true</useJSR310>
@@ -256,9 +279,54 @@
         </executions>
       </plugin>
       <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>sql-maven-plugin</artifactId>
+        <version>1.5</version>
+        <dependencies>
+          <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.196</version>
+            <scope>runtime</scope>
+          </dependency>
+        </dependencies>
+        <configuration>
+          <driver>${driver}</driver>
+          <url>${url}</url>
+          <username>${user}</username>
+          <password>${password}</password>
+        </configuration>
+        <executions>
+          <execution>
+            <id>create-sequences</id>
+            <phase>generate-resources</phase>
+            <goals>
+              <goal>execute</goal>
+            </goals>
+            <configuration>
+              <srcFiles>
+                <srcFile>src/main/resources/entity/ddl/sequence.sql</srcFile>
+              </srcFiles>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.20</version>
+        <dependencies>
+          <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-surefire-provider</artifactId>
+            <version>1.0.0</version>
+          </dependency>
+          <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.0.0</version>
+          </dependency>
+        </dependencies>
         <configuration>
           <useManifestOnlyJar>false</useManifestOnlyJar>
         </configuration>
