ログ設定の統一

--- a/src/main/resources/common.properties
+++ b/src/main/resources/common.properties
@@ -60,3 +60,18 @@ nablarch.transactionFactory.isolationLevel=READ_COMMITTED
 
 # SQLファイルのエンコーディング
 nablarch.sqlLoader.fileEncoding=utf-8
+
+# スレッドコンテキストに格納されるデフォルトの言語
+nablarch.languageAttribute.defaultLanguage=ja
+
+# サポート対象の言語
+nablarch.languageAttribute.supportedLanguages=ja,en
+
+# 言語を保持するクッキーの最長存続期間(秒単位)
+nablarch.languageAttribute.cookieMaxAge=7776000
+
+# スレッドコンテキストに格納されるデフォルトのタイムゾーン
+nablarch.timeZoneAttribute.defaultTimeZone=Asia/Tokyo
+
+# 未ログイン時にスレッドコンテキストに設定されるユーザID
+nablarch.userIdAttribute.anonymousId=999999999
