ログ設定の統一

--- a/src/main/resources/log.properties
+++ b/src/main/resources/log.properties
@@ -2,7 +2,7 @@
 # TODO システム要件にあわせてログ出力設定を見直してください。
 
 
-loggerFactory.className=nablarch.integration.log.slf4j.Slf4JLoggerFactory
+loggerFactory.className=nablarch.core.log.basic.BasicLoggerFactory
 
 writerNames=monitorFile,appFile,stdout
 
