change version to release version

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>nablarch-example-workflow</artifactId>
 
   <groupId>com.nablarch.workflow</groupId>
-  <version>5u16-SNAPSHOT</version>
+  <version>5u16</version>
   <packaging>war</packaging>
 
   <properties>
@@ -28,7 +28,7 @@
       <dependency>
         <groupId>com.nablarch.profile</groupId>
         <artifactId>nablarch-bom</artifactId>
-        <version>5u16-SNAPSHOT</version>
+        <version>5u16</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
