propertiesファイルをUTF-8 / LFに統一

--- a/src/main/resources/app-log.properties
+++ b/src/main/resources/app-log.properties
@@ -39,7 +39,7 @@ httpAccessLogFormatter.endFormat=@@@@ END @@@@ rid = [$requestId$] uid = [$userI
 #messagingLogFormatter.maskingChar=
 #messagingLogFormatter.maskingPatterns=
 
-# MOMƒƒbƒZ[ƒWƒ“ƒO—pƒtƒH[ƒ}ƒbƒg
+# MOMãƒ¡ãƒƒã‚»ãƒ¼ã‚¸ãƒ³ã‚°ç”¨ãƒ•ã‚©ãƒ¼ãƒãƒƒãƒˆ
 messagingLogFormatter.sentMessageFormat=@@@@ SENT MESSAGE @@@@\
                                           \n\tthread_name    = [$threadName$]\
                                           \n\tmessage_id     = [$messageId$]\
@@ -55,7 +55,7 @@ messagingLogFormatter.receivedMessageFormat=@@@@ RECEIVED MESSAGE @@@@\
                                               \n\tcorrelation_id = [$correlationId$]\
                                               \n\treply_to       = [$replyTo$]\
                                               \n\tmessage_body   = [$messageBody$]
-# HTTPƒƒbƒZ[ƒWƒ“ƒO—pƒtƒH[ƒ}ƒbƒg
+# HTTPãƒ¡ãƒƒã‚»ãƒ¼ã‚¸ãƒ³ã‚°ç”¨ãƒ•ã‚©ãƒ¼ãƒãƒƒãƒˆ
 messagingLogFormatter.httpSentMessageFormat=@@@@ HTTP SENT MESSAGE @@@@\
                                               \n\tthread_name    = [$threadName$]\
                                               \n\tmessage_id     = [$messageId$]\
@@ -84,7 +84,7 @@ performanceLogFormatter.format=\n\tpoint = [$point$] result = [$result$]\
 
 # SqlLogFormatter
 #sqlLogFormatter.className=
-# SqlPStatement#retrieve‚ÌƒtƒH[ƒ}ƒbƒg
+# SqlPStatement#retrieveã®ãƒ•ã‚©ãƒ¼ãƒãƒƒãƒˆ
 sqlLogFormatter.startRetrieveFormat=$methodName$\
                                       \n\tSQL = [$sql$]\
                                       \n\tstart_position = [$startPosition$] size = [$size$]\
@@ -94,7 +94,7 @@ sqlLogFormatter.startRetrieveFormat=$methodName$\
 sqlLogFormatter.endRetrieveFormat=$methodName$\
                                     \n\texecute_time(ms) = [$executeTime$] retrieve_time(ms) = [$retrieveTime$] count = [$count$]
 
-# SqlPStatement#execute‚ÌƒtƒH[ƒ}ƒbƒg
+# SqlPStatement#executeã®ãƒ•ã‚©ãƒ¼ãƒãƒƒãƒˆ
 sqlLogFormatter.startExecuteFormat=$methodName$\
                                       \n\tSQL = [$sql$]\
                                       \n\tadditional_info:\
@@ -102,7 +102,7 @@ sqlLogFormatter.startExecuteFormat=$methodName$\
 sqlLogFormatter.endExecuteFormat=$methodName$\
                                     \n\texecute_time(ms) = [$executeTime$]
 
-# SqlPStatement#executeQuery‚ÌƒtƒH[ƒ}ƒbƒg
+# SqlPStatement#executeQueryã®ãƒ•ã‚©ãƒ¼ãƒãƒƒãƒˆ
 sqlLogFormatter.startExecuteQueryFormat=$methodName$\
                                           \n\tSQL = [$sql$]\
                                           \n\tadditional_info:\
@@ -110,7 +110,7 @@ sqlLogFormatter.startExecuteQueryFormat=$methodName$\
 sqlLogFormatter.endExecuteQueryFormat=$methodName$\
                                         \n\texecute_time(ms) = [$executeTime$]
 
-# SqlPStatement#executeUpdate‚ÌƒtƒH[ƒ}ƒbƒg
+# SqlPStatement#executeUpdateã®ãƒ•ã‚©ãƒ¼ãƒãƒƒãƒˆ
 sqlLogFormatter.startExecuteUpdateFormat=$methodName$\
                                             \n\tSQL = [$sql$]\
                                             \n\tadditional_info:\
@@ -118,7 +118,7 @@ sqlLogFormatter.startExecuteUpdateFormat=$methodName$\
 sqlLogFormatter.endExecuteUpdateFormat=$methodName$\
                                         \n\texecute_time(ms) = [$executeTime$] update_count = [$updateCount$]
 
-# SqlStatement#executeBatch‚ÌƒtƒH[ƒ}ƒbƒg
+# SqlStatement#executeBatchã®ãƒ•ã‚©ãƒ¼ãƒãƒƒãƒˆ
 sqlLogFormatter.startExecuteBatchFormat=$methodName$\
                                           \n\tSQL = [$sql$]\
                                           \n\tadditional_info:\
