--- a/src/main/resources/log.properties
+++ b/src/main/resources/log.properties
@@ -1,4 +1,4 @@
-# ‰æ–ÊƒIƒ“ƒ‰ƒCƒ“ˆ—•û®-–{”ÔŠÂ‹«—pƒƒOİ’è
+# ç”»é¢ã‚ªãƒ³ãƒ©ã‚¤ãƒ³å‡¦ç†æ–¹å¼-æœ¬ç•ªç’°å¢ƒç”¨ãƒ­ã‚°è¨­å®š
 
 
 loggerFactory.className=nablarch.core.log.basic.BasicLoggerFactory
@@ -54,7 +54,7 @@ loggers.DEV.nameRegex=DEV
 loggers.DEV.level=INFO
 loggers.DEV.writerNames=appFile,stdout
 
-# HTTPƒAƒNƒZƒXƒƒO‚Ìİ’è
+# HTTPã‚¢ã‚¯ã‚»ã‚¹ãƒ­ã‚°ã®è¨­å®š
 loggers.ACC.nameRegex=HTTP_ACCESS
 loggers.ACC.level=INFO
 loggers.ACC.writerNames=appFile,stdout
