--- a/pom.xml
+++ b/pom.xml
@@ -106,7 +106,6 @@
     <dependency>
       <groupId>com.nablarch.workflow</groupId>
       <artifactId>nablarch-workflow</artifactId>
-      <version>1.1.0</version>
     </dependency>
 
     <dependency>
@@ -159,7 +158,7 @@
       <plugin>
         <groupId>com.nablarch.workflow</groupId>
         <artifactId>nablarch-workflow-tool</artifactId>
-        <version>1.1.0</version>
+        <version>5-NEXT-SNAPSHOT</version>
         <executions>
           <execution>
             <id>generate-csv</id>
