--- a/src/main/resources/common.properties
+++ b/src/main/resources/common.properties
@@ -2,8 +2,14 @@
 # プロジェクトのベースパッケージ
 nablarch.commonProperty.basePackage=please.change.me.action
 
+# 業務日付のデフォルト区分
+nablarch.businessDateProvider.defaultSegment=01
+
 # トランザクションタイムアウト時間（秒）
 nablarch.transactionFactory.transactionTimeoutSec=60
+
+# データベースへの値自動設定機能で設定する現在日付のデフォルトフォーマット
+nablarch.currentDateTimeAnnotationHandler.dateFormat=yyyyMMdd
 
 # ステートメントのフェッチサイズ
 nablarch.statementFactory.fetchSize=50
