--- a/pom.xml
+++ b/pom.xml
@@ -158,7 +158,7 @@
       <plugin>
         <groupId>com.nablarch.workflow</groupId>
         <artifactId>nablarch-workflow-tool</artifactId>
-        <version>5u24</version>
+        <version>1.1.0</version>
         <executions>
           <execution>
             <id>generate-csv</id>
