--- a/pom.xml
+++ b/pom.xml
@@ -178,7 +178,7 @@
       <plugin>
         <groupId>jp.co.tis.gsp</groupId>
         <artifactId>gsp-dba-maven-plugin</artifactId>
-        <version>4.7.0-SNAPSHOT</version>
+        <version>4.7.0</version>
         <dependencies>
           <dependency>
             <groupId>com.h2database</groupId>
