バージョンを次のリリースバージョンに更新

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>nablarch-example-workflow</artifactId>
 
   <groupId>com.nablarch.workflow</groupId>
-  <version>5-NEXT-SNAPSHOT</version>
+  <version>5u26</version>
   <packaging>war</packaging>
 
   <properties>
@@ -28,7 +28,7 @@
       <dependency>
         <groupId>com.nablarch.profile</groupId>
         <artifactId>nablarch-bom</artifactId>
-        <version>5-NEXT-SNAPSHOT</version>
+        <version>5u26</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -158,7 +158,7 @@
       <plugin>
         <groupId>com.nablarch.workflow</groupId>
         <artifactId>nablarch-workflow-tool</artifactId>
-        <version>5-NEXT-SNAPSHOT</version>
+        <version>1.1.1</version>
         <executions>
           <execution>
             <id>generate-csv</id>
@@ -178,7 +178,7 @@
       <plugin>
         <groupId>jp.co.tis.gsp</groupId>
         <artifactId>gsp-dba-maven-plugin</artifactId>
-        <version>4.8.0-SNAPSHOT</version>
+        <version>4.8.0</version>
         <dependencies>
           <dependency>
             <groupId>com.h2database</groupId>
